--- a/index.html
+++ b/index.html
@@ -14,25 +14,7 @@
 <p id="hello">Web Development</p>
 <button type="button" onclick="Replace()" class="button">Click me!</button>
 
-<script src="index.js">
-
-</script>
-<style>
-    h2{
-    text-transform: uppercase;
-}
-.button:hover{
-    border-radius: 5px;
-    border: none;
-    background-color: blue;
-    color: azure;
-    padding: 5px;
-}
-button{
-    color: white;
-    background-color: grey;
-}
-</style>
+<script src="index.js"></script>
  
 </body>
 </html>
